# SmartController

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WIRING GUIDE.txt  alarm.cpp  display.cpp  display.h  displayUI.cpp  displayUI.h  filelist.txt  general.cpp  general.h  mainV0.1.ino  relayControl.cpp  relayControl.h  setting.cpp  setting.h  tempSensor.cpp  tempSensor.h  ui-events.c  ui.c  ui.h  ui_addvansedSettingScreen.c  ui_controlSettingScreen.c  ui_events.c  ui_events.h  ui_helpers.h  ui_img_1025572639.c  ui_img_1025573664.c  ui_img_1025574689.c  ui_img_1104223176.c  ui_img_1117942354.c  ui_img_1122079624.c  ui_img_1341850634.c  ui_img_1716101175.c  ui_img_1740866726.c  ui_img_300499993.c  ui_img_300503194.c  ui_img_300506143.c  (+19 more)
Program/: CMakeLists.txt  Program.ino  alarm.cpp  alarm.h  display.cpp  display.h  general.cpp  general.h  logManager.cpp  logManager.h  logStatus.cpp  logStatus.h  n16r8-partitions.csv  note.md  relayControl.cpp  relayControl.h  setting.cpp  setting.h  tempSensor.cpp  tempSensor.h  ui.c  ui.h  ui_Boot_Screen.c  ui_Boot_Screen.h  ui_addvansedSettingScreen.c  ui_addvansedSettingScreen.h  ui_comp_hook.c  ui_controlSettingScreen.c  ui_controlSettingScreen.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1009310353.c  ui_img_1019942150.c  ui_img_1101012385.c  ui_img_120570296.c  ui_img_123_png.c  ui_img_1274595566.c  ui_img_1279246833.c  (+49 more)
Program/Wi-Fi/: WiFiManager.cpp  WiFiManager.h
Program/ui-parts/: ui.c  uiLogic.cpp  uiLogic.h  ui_Boot_Screen.c  ui_controlSettingScreen.c  ui_img_1101012385.c  ui_img_1234_png.c  ui_img_1488402037.c  ui_img_18821776.c  ui_img_300499993.c  ui_img_300505244.c  ui_img_31615732.c  ui_img_68039786.c  ui_img_835894428.c  ui_img_884211525.c  ui_img_close_png.c  ui_img_info_png.c  ui_img_menu43_png.c  ui_img_plus_png.c  ui_img_unread_png.c  ui_img_worker_png.c  ui_mainScreen.c
SquareLine/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
SquareLine/SquareLine_Project/: lv_conf.h
SquareLine/SquareLine_Project/ui/: ui_addvansedSettingScreen.c  ui_controlSettingScreen.c  ui_events.c  ui_img_1437619218.c  ui_img_2087107542.c  ui_img_return_66_png.c  ui_mainScreen.c  ui_processSettingScreen.c  ui_statusScreen.c
SquareLine/export/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_addvansedSettingScreen.c  ui_events.c  ui_img_1019942150.c  ui_img_1101012385.c  ui_img_1234_png.c  ui_img_165651551.c  ui_img_165652574.c  ui_img_18821776.c  ui_img_278418788.c  ui_img_31615732.c  ui_img_640283455.c  ui_img_menu43_png.c  ui_img_netff_color_background_85551_240x320_png.c  ui_img_pressure_png.c  ui_img_return_png.c  ui_img_worker_png.c
libraries/: lv_conf.h
libraries/LovyanGFX/src/: LGFX_ESP32_ILI9341.hpp
libraries/TFT_eSPI/: User_Setup.h
python-tools/: comment_tool.py
ui/: filelist.txt  ui.c  ui_Boot_Screen.c  ui_addvansedSettingScreen.c  ui_events.c  ui_events.h  ui_img_120570296.c  ui_img_1417296881.c  ui_img_1488402037.c  ui_img_1731839073.c  ui_img_2101917800.c  ui_img_300505244.c  ui_img_68039786.c  ui_img_778269571.c  ui_img_884211525.c  ui_img_loading_png.c  ui_img_temperature_png.c  ui_mainScreen.c  ui_processSettingScreen.c  ui_statusScreen.c
