SET(SOURCES ui_mainScreen.c
    ui_controlSettingScreen.c
    ui_processSettingScreen.c
    ui_addvansedSettingScreen.c
    ui_statusScreen.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_dots_shapes_purple_213704_240x320_png.c
    ui_img_2087107542.c
    ui_img_640283455.c
    ui_img_165651551.c
    ui_img_165652574.c
    ui_img_300503194.c
    ui_img_300506143.c
    ui_img_835894428.c
    ui_img_539814101.c
    ui_img_31617782.c
    ui_img_31615732.c
    ui_img_2101917800.c
    ui_img_778269571.c
    ui_img_blue_color_background_85551_240x320_png.c
    ui_img_return_png.c
    ui_img_278418788.c
    ui_img_worker_png.c
    ui_img_68039786.c
    ui_img_info_png.c
    ui_img_plus_png.c
    ui_img_1731839073.c
    ui_img_208276483.c
    ui_img_1740866726.c
    ui_img_temperature_png.c
    ui_img_return_66_png.c
    ui_img_sensor_png.c
    ui_img_120570296.c
    ui_img_wifi_png.c
    ui_img_983251955.c
    ui_img_close_png.c
    ui_img_1437619218.c
    ui_img_18821776.c
    ui_img_dots_circles_shapes_213107_240x320_png.c
    ui_img_net_color_background_85551_240x320_png.c
    ui_img_netlkjhg_color_background_85551_240x320_png.c
    ui_img_wifi_4_png.c)

add_library(ui ${SOURCES})
