SET(SOURCES ui_mainScreen.c
    ui_controlSettingScreen.c
    ui_processSettingScreen.c
    ui_addvansedSettingScreen.c
    ui_statusScreen.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_1341850634.c
    ui_img_2087107542.c
    ui_img_640283455.c
    ui_img_165651551.c
    ui_img_165652574.c
    ui_img_300499993.c
    ui_img_300505244.c
    ui_img_835894428.c
    ui_img_1488402037.c
    ui_img_pressure_png.c
    ui_img_31615732.c
    ui_img_2101917800.c
    ui_img_778269571.c
    ui_img_netlkjhg_color_background_85551_240x320_png.c
    ui_img_return_png.c
    ui_img_278418788.c
    ui_img_worker_png.c
    ui_img_68039786.c
    ui_img_info_png.c
    ui_img_plus_png.c
    ui_img_1731839073.c
    ui_img_208276483.c
    ui_img_1740866726.c
    ui_img_temperature_png.c
    ui_img_return_66_png.c
    ui_img_sensor_png.c
    ui_img_120570296.c
    ui_img_wifi_png.c
    ui_img_983251955.c
    ui_img_close_png.c
    ui_img_1437619218.c
    ui_img_18821776.c
    ui_img_blue_color_background_85551_240x320_png.c
    ui_img_dots_circles_shapes_213107_240x320_png.c
    ui_img_dots_shapes_purple_213704_240x320_png.c
    ui_img_net_color_background_85551_240x320_png.c
    ui_img_wifi_4_png.c
    ui_img_421771461.c
    ui_img_1117942354.c
    ui_img_1716101175.c
    ui_img_1104223176.c
    ui_img_1025573664.c
    ui_img_1025572639.c
    ui_img_1025574689.c
    ui_img_menu43_png.c)

add_library(ui ${SOURCES})
