SET(SOURCES ui_Boot_Screen.c
    ui_controlSettingScreen.c
    ui_processSettingScreen.c
    ui_addvansedSettingScreen.c
    ui_statusScreen.c
    ui_mainScreen.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_1234_png.c
    ui_img_884211525.c
    ui_img_loading_png.c
    ui_img_return_png.c
    ui_img_278418788.c
    ui_img_worker_png.c
    ui_img_68039786.c
    ui_img_info_png.c
    ui_img_plus_png.c
    ui_img_1731839073.c
    ui_img_1019942150.c
    ui_img_return_66_png.c
    ui_img_unread_png.c
    ui_img_temperature_png.c
    ui_img_blur_color_background_85551_240x320_png.c
    ui_img_1101012385.c
    ui_img_sensor_png.c
    ui_img_120570296.c
    ui_img_wifi_png.c
    ui_img_983251955.c
    ui_img_close_png.c
    ui_img_1437619218.c
    ui_img_18821776.c
    ui_img_1279246833.c
    ui_img_640283455.c
    ui_img_165651551.c
    ui_img_165652574.c
    ui_img_300499993.c
    ui_img_300505244.c
    ui_img_835894428.c
    ui_img_1488402037.c
    ui_img_pressure_png.c
    ui_img_31615732.c
    ui_img_2101917800.c
    ui_img_778269571.c
    ui_img_blur_240x320_png.c
    ui_img_575393433.c
    ui_img_menu43_png.c
    ui_img_1397087731.c
    ui_img_netff_color_background_85551_240x320_png.c
    ui_img_1417296881.c
    ui_img_netlkjhg_color_background_85551_240x320_png.c)

add_library(ui ${SOURCES})
